--- a/VSBothExtension/VSBothExtension.csproj
+++ b/VSBothExtension/VSBothExtension.csproj
@@ -17,8 +17,8 @@
     <ProjectGuid>{7B8C9D0E-1F2A-3B4C-5D6E-7F8A9B0C1D2E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VSExtension</RootNamespace>
-    <AssemblyName>VSExtension</AssemblyName>
+    <RootNamespace>VSBothExtension</RootNamespace>
+    <AssemblyName>VSBothExtension</AssemblyName>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <UseCodebase>true</UseCodebase>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
@@ -53,7 +53,7 @@
     <Compile Include="VSCodeToolWindowControl.xaml.cs">
       <DependentUpon>VSCodeToolWindowControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="VSExtensionPackage.cs" />
+    <Compile Include="VSBothExtensionPackage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
@@ -87,12 +87,6 @@
       <ResourceName>Menus.ctmenu</ResourceName>
       <SubType>Designer</SubType>
     </VSCTCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="$(IntermediateOutputPath)VSCommands.cto">
-      <Link>VSCommands.cto</Link>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
